# Nearssage

./: .gitignore  COPYING.txt  Cargo.toml  README.md
client/: Cargo.toml
client/src/: config.rs  connection.rs  lib.rs  session.rs
commons/: Cargo.toml
commons/src/: authenticated.rs  checksum.rs  compress.rs  crypt.rs  data.rs  encoder.rs  identity.rs  keychain.rs  lib.rs  payload.rs  signature.rs
commons/src/exchange/: csidh.rs  ecdh.rs  mod.rs
commons/src/message/: content.rs  mod.rs
commons/src/session/: bundle.rs  initial.rs  mod.rs
commons/src/user/: mod.rs  preferences.rs  profile.rs
protocol/: Cargo.toml
protocol/src/: connection.rs  lib.rs  network_buf.rs  signal.rs  sugar.rs
protocol/src/codec/: client.rs  mod.rs  server.rs
protocol/src/codec/server/: mod.rs  state.rs
schema/: Cargo.toml
schema/src/: account.rs  chat.rs  device.rs  lib.rs  preference.rs  profile.rs  session.rs
server/: Cargo.toml
server/src/: client.rs  config.rs  handler.rs  lib.rs  main.rs  network_buf.rs  router.rs
server/src/analytics/: metrics.rs  mod.rs  tracing.rs
server/src/user/: chat.rs  device.rs  mod.rs  preferences.rs  profile.rs  status.rs
src/: main.rs
storage/: Cargo.toml
storage/src/: entry.rs  lib.rs  object.rs
