[package]
name = "nearssage_client"
description = "Nearsagges's client 🚀"
version = "0.0.1"
edition = "2021"

[dependencies]
nearssage_commons = { path = "../commons" }
nearssage_protocol = { path = "../protocol" }
tokio = { version = "1.28", features = ["full"] }
flume = "0.10"
tracing = "0.1"
udp-stream = "0"
rclite = "0.2"
atomic_refcell = "0.1"
derive_more = "0.99"
either = "1"
anyhow = "1"

