[package]
name = "nearssage_protocol"
description = "Nearsagges's protocol ➿"
version = "0.0.1"
edition = "2021"

[dependencies]
nearssage_commons = { path = "../commons" }
tokio = { version = "1.28", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
tower = { version = "0.4", features = ["full"] }
tokio-tower = "0.6"
smallvec = { version = "1.10", features = ["serde", "write"] }
compact_str = { version = "0.7", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
type-rules = { version = "0.2.0", features = ["derive"] }
blake3 = "1.3"
crc32fast = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_arrays = "0.1.0"
pqcrypto = { version = "0.16", features = ["serialization"] }
derive_more = "0.99"
getset = "0"
either = { version = "1", features = ["serde"] }
anyhow = "1"
