[package]
name = "nearssage_protocol"
description = "Nearssages's networking protocol ➿"
version = "0.0.1"
edition = "2021"

[dependencies]
nearssage_commons = { path = "../commons" }
nearssage_schema = { path = "../schema" }
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
udp-stream = "0"
metrics = "0.21"
smallbox = "0.8"
compact_str = { version = "0.7", features = ["serde"] }
type-rules = { version = "0.2", features = ["derive"] }
blake3 = "1.3"
serde = { version = "1.0", features = ["derive"] }
const_format = "0.2"
either = { version = "1", features = ["serde"] }
anyhow = "1"
thiserror = "1"
